# cpp-start-template

./: .clang-tidy  .gitignore  CMakeLists.txt  Readme.md  build.sh  main.cpp  pyproject.toml  test.py
